Customize actionbar logo, title, and color to more reflect Twitter
Uses actual Twitter assets:
https://about.twitter.com/press/brand-assets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Just Tweet</string>
     <string name="login_label">Connect with Twitter</string>
-    <string name="title_activity_timeline">Home Timeline</string>
+    <string name="title_activity_timeline">Home</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
