--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <!-- Timeline Action Bar -->
     <string name="compose">compose</string>
 
-    <string name="title_activity_compose">ComposeActivity</string>
+    <string name="title_activity_compose">""</string>
 
     <!-- Timeline Action Bar -->
     <string name="menu_send_tweet">TWEET</string>
